5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1715_3033.log
== SUBMITION (2019-05-02 16:27:27) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0) or not(0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.146258
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:28:16) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0) and not(0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.151449
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:45) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0) or not(0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:30:33) 
-- CODE:
x= float(input("valorX: "))

if (not -100<=x<0 or not 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.140156
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
entrada invalida
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:32:20) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or (0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.169497
-- ERROR:
  File "/home/codebench/codes/1715/3033/main.py", line 3
    if not(-100<=x<0 or (0<x<=100):
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:33:22) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.180811
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:33:30) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.17868
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:32) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- OUTPUT:
92.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:14) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- OUTPUT:
92.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:29) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0 or 0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- OUTPUT:
92.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:39) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0) or not(0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- OUTPUT:
entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:39:21) 
-- CODE:
x= float(input("valorX: "))

if not(-100<=x<0) and not(0<x<=100):
	print("entrada invalida")
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print(round(x, 4))
-- EXECUTION TIME:
0.205146
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:20) 
-- CODE:
x= float(input("valorX: "))


if (0<x<=100):
	print(round(x, 4))
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.180761
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:44:48) 
-- CODE:
x= float(input("valorX: "))


if (-100<=x<0):
	print(round(x, 4))
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.18067
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:45:20) 
-- CODE:
x= float(input("valorX: "))


if (-100<=x<0):
	print(round(x, 4))
	
elif (0<x<=100):
	print(round(x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.172159
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
92.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
-55.25
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
0.025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:48:51) 
-- CODE:
x= float(input("valorX: "))


if (-100<=x<0):
	print(round(-1//x, 4))
	
elif (0<x<=100):
	print(round(1//x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.194957
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
valorX: 0.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
valorX: 0.0
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
valorX: 39.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:28) 
-- CODE:
x= float(input("valorX: "))


if (-100<=x<0):
	print(round(-1//x, 4))
	
elif (0<x<=100):
	print(round(1//x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.164073
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
39.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:28) 
-- CODE:
x= float(input("valorX: "))


if (-100<=x<0):
	print(round(-1//x, 4))
	
elif (0<x<=100):
	print(round(1//x, 4))
	
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.197098
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
39.0
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
